--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "report-coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "devDependencies": {
-    "co": "^4.6",
+    "any-promise": "^1.3.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.9",
     "eslint": "~2.11.1",
     "istanbul": "^0.4.3",
+    "lie": "^3.0.4",
     "mocha": "^2.5.3"
   }
 }
