--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
   },
   "devDependencies": {
     "any-promise": "^1.3.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
-    "coveralls": "^2.11.9",
-    "eslint": "~2.13.1",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "coveralls": "^3.0.0",
+    "eslint": "^4.8.0",
     "istanbul": "^0.4.3",
     "lie": "^3.0.4",
-    "mocha": "^2.5.3"
+    "mocha": "^4.0.1"
   }
 }
